add java code example

--- a/web/index.html
+++ b/web/index.html
@@ -451,7 +451,7 @@ permalink: "{{ page.filePathStem }}.html"
         <li><a href="#groovy_1" data-toggle="tab">Groovy</a></li>
       </ul>
       <div class="tab-content">
-        <div class="tab-pane" id="java_1">
+        <div class="tab-pane active" id="java_1">
           <div class="code" style="text-align: left;">
           <pre class="prettyprint lang-java"><code>
 var iris = Read.arff("iris.arff");
@@ -463,7 +463,7 @@ println(model.metrics());
           </div>
           <div class="caption">DataFrame, Model Fitting, and Metrics</div>
         </div>
-        <div class="tab-pane active" id="scala_1">
+        <div class="tab-pane" id="scala_1">
           <div class="code" style="text-align: left;">
           <pre class="prettyprint lang-scala"><code>
 val iris = read.arff("iris.arff")
