--- a/web/vegalite.html
+++ b/web/vegalite.html
@@ -231,8 +231,8 @@ show(sortedAggregateBar)
     <h3 id="grouped_bar" class="title">Grouped Bar Chart</h3>
 
     <ul class="nav nav-tabs">
-        <li><a href="#java_4" data-toggle="tab">Java</a></li>
-        <li class="active"><a href="#scala_4" data-toggle="tab">Scala</a></li>
+        <li class="active"><a href="#java_4" data-toggle="tab">Java</a></li>
+        <li><a href="#scala_4" data-toggle="tab">Scala</a></li>
     </ul>
     <div class="tab-content">
         <div class="tab-pane active" id="java_4">
@@ -479,8 +479,8 @@ val horizontalStackedBar = VegaLite("https://vega.github.io/vega-lite/examples/d
     <h3 id="layered_bar" class="title">Layered Bar Chart</h3>
 
     <ul class="nav nav-tabs">
-        <li><a href="#java_8" data-toggle="tab">Java</a></li>
-        <li class="active"><a href="#scala_8" data-toggle="tab">Scala</a></li>
+        <li class="active"><a href="#java_8" data-toggle="tab">Java</a></li>
+        <li><a href="#scala_8" data-toggle="tab">Scala</a></li>
     </ul>
     <div class="tab-content">
         <div class="tab-pane active" id="java_8">
