refactor Instance to record SampleInstance

--- a/web/data.html
+++ b/web/data.html
@@ -1772,7 +1772,7 @@ airline ==> [Month: byte nominal[c-1, c-2, c-3, c-4, c-5, c-6 ... ----+
             <div class="code" style="text-align: left;">
     <pre class="prettyprint lang-kotlin"><code>
     >>> read.libsvm("data/libsvm/glass.txt")
-    res118: smile.data.Dataset<smile.data.Instance<smile.util.SparseArray>> = smile.data.DatasetImpl@50d667c3
+    res118: smile.data.Dataset<smile.data.SampleInstance<smile.util.SparseArray>> = smile.data.DatasetImpl@50d667c3
     </code></pre>
             </div>
         </div>
