more links to blog posts

--- a/web/index.html
+++ b/web/index.html
@@ -15,14 +15,17 @@ permalink: "{{ page.filePathStem }}.html"
       <li><a href="https://github.com/haifengl/smile/releases/tag/v3.0.2">Smile 3.0.2 Released!</a>
         <span class="small">(Jun 14, 2023)</span></li>
 
+      <li><a href="https://medium.com/@lbq999/time-series-prediction-model-in-java-using-the-smile-library-df4bcdc4cfa0">Time-Series Prediction Model in Java Using the Smile Library</a>
+        <span class="small">(Oct 16, 2023)</span></li>
+
+      <li><a href="https://magnusgunnarsson.se/offentlig/getting-started-with-smile-with-kotlin/">Getting started with SMILE with Kotlin</a>
+        <span class="small">(Feb 23, 2021)</span></li>
+
       <li><a href="https://sudonull.com/post/28015-ML-on-Scala-with-a-smile-for-those-who-are-not-afraid-of-experiments-Yulas-blog">ML on Scala with a Smile</a>
         <span class="small">(May 22, 2019)</span></li>
 
       <li><a href="https://www.youtube.com/watch?v=aqT_0qFOBUI">Dex Machine Learning with SMILE ML</a>
         <span class="small">(Mar 28, 2018, by Patrick Martin)</span></li>
-
-      <li><a href="https://activewizards.com/blog/top-15-scala-libraries-for-data-science/">Top 15 Scala Libraries for Data Science in 2018</a>
-        <span class="small">(Jan 10, 2018, by ActiveWizards)</span></li>
 
       <li><a href="https://www.infoworld.com/article/3220428/machine-learning/3-projects-lighting-a-fire-under-machine-learning.html">3 projects lighting a fire under machine learning</a>
         <span class="small">(Aug 30, 2017, by InfoWorld)</span></li>
