--- a/web/index.html
+++ b/web/index.html
@@ -16,13 +16,10 @@ permalink: "{{ page.filePathStem }}.html"
         <span class="small">(Jun 14, 2023)</span></li>
 
       <li><a href="https://medium.com/@lbq999/time-series-prediction-model-in-java-using-the-smile-library-df4bcdc4cfa0">Time-Series Prediction Model in Java Using the Smile Library</a>
-        <span class="small">(Oct 16, 2023)</span></li>
+        <span class="small">(Oct 16, 2023, by Boqiang & Henry)</span></li>
 
       <li><a href="https://magnusgunnarsson.se/offentlig/getting-started-with-smile-with-kotlin/">Getting started with SMILE with Kotlin</a>
-        <span class="small">(Feb 23, 2021)</span></li>
-
-      <li><a href="https://sudonull.com/post/28015-ML-on-Scala-with-a-smile-for-those-who-are-not-afraid-of-experiments-Yulas-blog">ML on Scala with a Smile</a>
-        <span class="small">(May 22, 2019)</span></li>
+        <span class="small">(Feb 23, 2021, by Magnus MacHale-Gunnarsson)</span></li>
 
       <li><a href="https://www.youtube.com/watch?v=aqT_0qFOBUI">Dex Machine Learning with SMILE ML</a>
         <span class="small">(Mar 28, 2018, by Patrick Martin)</span></li>
