--- a/web/index.html
+++ b/web/index.html
@@ -16,7 +16,10 @@ permalink: "{{ page.filePathStem }}.html"
         <span class="small">(Jun 14, 2023)</span></li>
 
       <li><a href="https://medium.com/@lbq999/time-series-prediction-model-in-java-using-the-smile-library-df4bcdc4cfa0">Time-Series Prediction Model in Java Using the Smile Library</a>
-        <span class="small">(Oct 16, 2023, by Boqiang & Henry)</span></li>
+        <span class="small">(Oct 16, 2023, by Boqiang &amp; Henry)</span></li>
+
+      <li><a href="https://www.almabetter.com/bytes/articles/machine-learning-libraries">10 Best Machine Learning Libraries You Should Know in 2024</a>
+        <span class="small">(May 16, 2023, by AlmaBetter Bytes)</span></li>
 
       <li><a href="https://magnusgunnarsson.se/offentlig/getting-started-with-smile-with-kotlin/">Getting started with SMILE with Kotlin</a>
         <span class="small">(Feb 23, 2021, by Magnus MacHale-Gunnarsson)</span></li>
