--- a/web/data.html
+++ b/web/data.html
@@ -1387,9 +1387,9 @@ permalink: "{{ page.filePathStem }}.html"
     </div>
 
     <h3 id="read.arff">Weka ARFF</h3>
-    <p><a href="http://www.cs.waikato.ac.nz/ml/weka/arff.html">Weka ARFF (attribute relation file format)</a>
+    <p><a href="https://www.cs.waikato.ac.nz/ml/weka/arff.html">Weka ARFF (attribute relation file format)</a>
         is an ASCII text file format that is essentially a CSV file with a header that describes the metadata.
-        ARFF was developed for use in the <a href="http://www.cs.waikato.ac.nz/ml/weka/">Weka</a> machine learning software.</p>
+        ARFF was developed for use in the <a href="https://www.cs.waikato.ac.nz/ml/weka/">Weka</a> machine learning software.</p>
 
     <p>A dataset is firstly described, beginning with the name of the dataset (or the relation in ARFF terminology).
         Each of the variables (or attribute in ARFF terminology) used to describe the observations is then identified,
@@ -1953,7 +1953,7 @@ airline ==> [Month: byte nominal[c-1, c-2, c-3, c-4, c-5, c-6 ... ----+
     </div>
 
     <p>The second format is more complicated and powerful, called Harwell-Boeing Exchange Format.
-        For details, see <a href="http://people.sc.fsu.edu/~jburkardt/data/hb/hb.html">http://people.sc.fsu.edu/~jburkardt/data/hb/hb.html</a>.
+        For details, see <a href="https://people.sc.fsu.edu/~jburkardt/data/hb/hb.html">https://people.sc.fsu.edu/~jburkardt/data/hb/hb.html</a>.
         Note that our implementation supports only real-valued matrix, and we ignore
         the optional right hand side vectors. This format is supported by the function
         <code>SparseMatrix.harwell(Path path)</code>. </p>
