--- a/web/manifold.html
+++ b/web/manifold.html
@@ -111,7 +111,7 @@ permalink: "{{ page.filePathStem }}.html"
     </div>
 
     <p>In the below example, we apply Isomap to the famous
-        <a href="http://people.cs.uchicago.edu/~dinoj/manifold/swissroll.html">swiss roll data</a> as shown above.
+        <a href="https://people.cs.uchicago.edu/~dinoj/manifold/swissroll.html">swiss roll data</a> as shown above.
         This data set was created to test out various dimensionality reduction algorithms.
         The idea was to create several points in 2d, and then map them to 3d with some smooth
         function, and then to see what the algorithm would find when it mapped the points back to 2d.
