--- a/web/quickstart.html
+++ b/web/quickstart.html
@@ -70,7 +70,7 @@ permalink: "{{ page.filePathStem }}.html"
     </code></pre>
 
             <p>to enter the shell, which is based on Scala REPL.
-                If you prefer <a href="http://ammonite.io">Ammonite REPL</a>,
+                If you prefer <a href="https://ammonite.io">Ammonite REPL</a>,
                 copy its jar to Smile's <code>lib</code> directory. Smile Shell
                 will switch to Ammonite once restarted.
                 In the shell, you can run any valid Scala expressions.
@@ -198,7 +198,7 @@ smile&gt;
     </code></pre>
             <p>Scala is a powerful and complicated language that fuses object-oriented programming and functional programming.
                 Although you don't need to know all the bells and whistles of Scala to use Smile, we strongly recommend you to
-                learn some <a href="http://www.scala-lang.org/documentation/">basics</a>.</p>
+                learn some <a href="https://www.scala-lang.org/documentation/">basics</a>.</p>
 
             <h3 id="script">Script</h3>
 
