--- a/web/visualization.html
+++ b/web/visualization.html
@@ -172,7 +172,7 @@ permalink: "{{ page.filePathStem }}.html"
         <div class="tab-pane" id="java_4">
             <div class="code" style="text-align: left;">
           <pre class="prettyprint lang-java"><code>
-    var canvas = PlotGrid.of(iris, "class", '*');
+    var canvas = PlotGrid.splom(iris, '*', "class");
     canvas.window();
           </code></pre>
             </div>
@@ -242,7 +242,7 @@ permalink: "{{ page.filePathStem }}.html"
         heart[i][0] = 16 * pow(sin(t), 3);
         heart[i][1] = 13 * cos(t) - 5 * cos(2*t) - 2 * cos(3*t) - cos(4*t);
     }
-    var canvas = LinePlot.of(heart, Color.RED);
+    var canvas = LinePlot.of(heart, Color.RED).canvas();
     canvas.window();
           </code></pre>
             </div>
@@ -391,7 +391,7 @@ permalink: "{{ page.filePathStem }}.html"
         <div class="tab-pane active" id="scala_10">
             <div class="code" style="text-align: left;">
     <pre class="prettyprint lang-scala"><code>
-    val cow = read.csv("data/npr/cow.txt", header=false)("V1").toDoubleArray
+    val cow = read.csv("data/stat/cow.txt", header=false)("V1").toDoubleArray
     val canvas = hist(cow, 50)
     canvas.setAxisLabels("Weight", "Probability")
     show(canvas)
@@ -401,7 +401,7 @@ permalink: "{{ page.filePathStem }}.html"
         <div class="tab-pane" id="java_10">
             <div class="code" style="text-align: left;">
           <pre class="prettyprint lang-java"><code>
-    var cow = Read.csv("data/npr/cow.txt").column("V1").toDoubleArray();
+    var cow = Read.csv("data/stat/cow.txt").column("V1").toDoubleArray();
     var canvas = Histogram.of(cow, 50, true).canvas();
     canvas.setAxisLabels("Weight", "Probability");
     canvas.window();
