--- a/web/faq.html
+++ b/web/faq.html
@@ -27,24 +27,24 @@ permalink: "{{ page.filePathStem }}.html"
     &lt;dependency&gt;
       &lt;groupId&gt;com.github.haifengl&lt;/groupId&gt;
       &lt;artifactId&gt;smile-core&lt;/artifactId&gt;
-      &lt;version&gt;3.1.0&lt;/version&gt;
+      &lt;version&gt;3.1.1&lt;/version&gt;
     &lt;/dependency&gt;
     </code></pre>
 
     <p>If you're using Gradle, add the following line into your build
         file's <code>dependencies</code> section:</p>
     <pre><code>
-    implementation("com.github.haifengl:smile-core:3.1.0")
+    implementation("com.github.haifengl:smile-core:3.1.1")
     </code></pre>
 
     <p>If you're using SBT, add the following line into your build file:</p>
     <pre><code>
-    libraryDependencies += "com.github.haifengl" % "smile-core" % "3.1.0"
+    libraryDependencies += "com.github.haifengl" % "smile-core" % "3.1.1"
     </code></pre>
 
     <p>For Scala API,</p>
     <pre><code>
-    libraryDependencies += "com.github.haifengl" %% "smile-scala" % "3.1.0"
+    libraryDependencies += "com.github.haifengl" %% "smile-scala" % "3.1.1"
     </code></pre>
 
     <p>Some algorithms rely on BLAS and LAPACK (e.g. manifold learning,
@@ -70,11 +70,16 @@ permalink: "{{ page.filePathStem }}.html"
         options such as `-Djava.library.path=/usr/lib/ -Dorg.bytedeco.openblas.load=blas`.</p>
 
     <p>For a default installation of MKL that would be `-Dorg.bytedeco.openblas.load=mkl_rt`.
-        Or you may simply include `smile-mkl` module in your project, which
-        includes MKL binaries. With `smile-mkl` module in the class path, Smile
-        will automatically switch to MKL.</p>
+        Or you may add the following dependencies to your project, which
+        includes MKL binaries. Smile will automatically switch to MKL.</p>
     <pre><code>
-    libraryDependencies += "com.github.haifengl" % "smile-mkl" % "3.1.0"
+    libraryDependencies ++= {
+      val version = "2024.0-1.5.10"
+      Seq(
+        "org.bytedeco" % "mkl-platform"        % version,
+        "org.bytedeco" % "mkl-platform-redist" % version
+      )
+    }
     </code></pre>
 
     <h2 class="question" id="model-serialization">Model serialization</h2>
