update index and quick start

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -415,7 +415,7 @@ permalink: "{{ page.filePathStem }}.html"
       </p>
 
       <p>Compared to this third-party <a href="https://github.com/szilard/benchm-ml">benchmark</a>,
-        Smile outperforms R, Python, Spark, H2O, xgboost significantly. Smile is a couple of times
+        Smile outperforms R, Python, Spark, H2O, xgboost significantly. Smile is several times
         faster than the closest competitor. The memory usage is also very efficient. If we can train
         advanced machine learning models on a PC, why buy a cluster?
       </p>
@@ -437,8 +437,8 @@ permalink: "{{ page.filePathStem }}.html"
         Data scientists and developers can speak the same language now!
       </p>
 
-      <p>Smile provides hundreds advanced algorithms with clean interface. Scala API also offers
-        high-level operators that make it easy to build machine learning apps.
+      <p>Smile provides hundreds advanced algorithms with clean interface. Scala/Kotlin
+        API also offers high-level operators that make it easy to build machine learning apps.
         And you can use it interactively from the shell, embedded in Scala.
       </p>
     </div>
@@ -524,7 +524,7 @@ println model.metrics()
       <p class="lead">
         The most complete machine learning engine. Smile covers every aspect of machine learning.
       </p>
-      <p>Classification, regression, clustering, association rule mining, feature selection,
+      <p>LLM, computer vision, deep learning, classification, regression, clustering, association rule mining, feature selection,
         manifold learning, multidimensional scaling, genetic algorithm, missing value imputation,
         efficient nearest neighbor search, etc. See the sidebar for a list of available algorithms.
       </p>
@@ -543,8 +543,10 @@ println model.metrics()
       <p class="lead">
         Understanding human language, and the intent behind our words.
       </p>
-      <p>Tokenizers, stemming, word2vec, phrase detection, part-of-speech tagging, keyword extraction,
-        named entity recognition, sentiment analysis, relevance ranking, taxomony.
+      <p>GenAI with Llama 3 on JVM (more coming). Smile also includes many classic
+        NLP algorithms such as tokenizers, stemming, word2vec, phrase detection,
+        part-of-speech tagging, keyword extraction, named entity recognition,
+        sentiment analysis, relevance ranking, taxomony, etc.
       </p>
     </div>
     <div class="col-md-5 col-sm-5 col-padded-top col-center">
