fix projection algorithm links

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -127,12 +127,12 @@ permalink: "{{ page.filePathStem }}.html"
 
       <dt><a href="api/java/smile/projection/package-summary.html">Dimension Reduction</a></dt>
       <dd><p>
-        <a href="api/java/smile/projection/PCA.html">PCA</a>,
-        <a href="api/java/smile/projection/KPCA.html">Kernel PCA</a>,
-        <a href="api/java/smile/projection/PPCA.html">Probabilistic PCA</a>,
-        <a href="api/java/smile/projection/GHA.html">Generalized Hebbian Algorithm</a>,
-        <a href="api/java/smile/projection/RandomProjection.html">Random Project</a>,
-        <a href="api/java/smile/projection/ICA.html">ICA</a>
+        <a href="api/java/smile/feature/extraction/PCA.html">PCA</a>,
+        <a href="api/java/smile/feature/extraction/KernalPCA.html">Kernel PCA</a>,
+        <a href="api/java/smile/feature/extraction/ProbabilisticPCA.html">Probabilistic PCA</a>,
+        <a href="api/java/smile/feature/extraction/GHA.html">Generalized Hebbian Algorithm</a>,
+        <a href="api/java/smile/feature/extraction/RandomProjection.html">Random Project</a>,
+        <a href="api/java/smile/ica/ICA.html">ICA</a>
       </p></dd>
 
       <dt><a href="api/java/smile/validation/package-summary.html">Model Validation</a></dt>
